JBTM-2685 Update to use jigsaw jdk 9